# MPV-IPC-Client

./: .gitignore  README.md  mpv_ipc_client.py  pyproject.toml
